# B8-Data-Pipes

./: .env.example  .gitignore  README.md  pyproject.toml  release.sh  workspace.yaml
b8_data_pipes/: __init__.py  configs.py  definitions.py  jobs.py  resources.py  schedules.py
b8_data_pipes/assets/: booking_report.py
b8_data_pipes/jobs/: weekly_booking_report.py
