[project]
name = "b8-data-pipes"
version = "0.1.0"
description = "Data pipelines for B8 Network"
requires-python = ">=3.8"
dependencies = [
    "dagster>=1.5.0",
    "dagster-webserver>=1.5.0",
    "firebase-admin>=6.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"
